--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zechat.android.training.zemoso.zechat">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".utils.ZeChatApplication"
         android:allowBackup="true"
@@ -40,6 +41,9 @@
         <service
             android:name=".services.DownloadDataService"
             android:exported="false" />
+        <service
+            android:name=".services.VolleyJsonDownload"
+            android:exported="false"></service>
     </application>
 
 </manifest>
