--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,9 @@
             android:exported="false" />
         <service
             android:name=".services.VolleyJsonDownload"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <activity android:name=".activities.ChatsProfile"></activity>
     </application>
 
 </manifest>
