--- a/build.gradle
+++ b/build.gradle
@@ -3,15 +3,16 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'io.realm:realm-gradle-plugin:3.5.0'
+        classpath 'io.fabric.tools:gradle:1.23.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
 allprojects {
     repositories {
         jcenter()
